Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </details>
 
     <a class="block px-3 py-2 rounded-lg hover:bg-gray-100" href="forms.php.html">Forms</a>
-    <a class="block px-3 py-2 rounded-lg hover:bg-gray-100" href="contact.php.html">Contact</a>
+    <a class="block px-3 py-2 rounded-lg hover:bg-gray-100" href="C:\Users\User\Desktop\ca2_212619 (5)\ca2_212619\html\contact.php.html">Contact</a>
   </div>
 </header>
 
@@ -220,7 +220,7 @@
           <a href="#services" class="px-6 py-3 rounded-2xl bg-brand hover:bg-primary text-white font-semibold shadow-md transition duration-300 flex items-center gap-2">
             <i class="fa fa-briefcase"></i> Our Services
           </a>
-          <a href="contact.php.html" class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/30 hover:bg-white/20 font-semibold transition duration-300 flex items-center gap-2">
+          <a href="C:\Users\User\Desktop\ca2_212619 (5)\ca2_212619\html\contact.php.html" class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/30 hover:bg-white/20 font-semibold transition duration-300 flex items-center gap-2">
             <i class="fa fa-paper-plane"></i> Contact Us
           </a>
         </div>
@@ -385,8 +385,8 @@
       </p>
       <div class="mt-8 flex flex-wrap justify-center gap-4">
         <a class="px-6 py-3 rounded-2xl bg-white text-gray-900 font-semibold shadow-md transition hover:bg-gray-100" href="about-us.php.html">Why Join Us</a>
-        <a class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/40 hover:bg-white/20 font-semibold transition" href="contact.php.html">Apply Now</a>
-        <a class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/40 hover:bg-white/20 font-semibold transition" href="contact.php.html">Contact Us</a>
+        <a class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/40 hover:bg-white/20 font-semibold transition" href="C:\Users\User\Desktop\ca2_212619 (5)\ca2_212619\html\contact.php.html">Apply Now</a>
+        <a class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/40 hover:bg-white/20 font-semibold transition" href="C:\Users\User\Desktop\ca2_212619 (5)\ca2_212619\html\contact.php.html">Contact Us</a>
       </div>
     </div>
   </section>
@@ -491,4 +491,5 @@
     animatedEls.forEach(el => observer.observe(el));
   </script>
 </body>
+
 </html>
