Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
 
       <a class="hover:text-primary" href="forms.php.html">Forms</a>
-      <a class="hover:text-primary" href="contact.php.html">Contact</a>
+      <a class="hover:text-primary" href="html/contact.php.html">Contact</a>
     </nav>
   </div>
 
@@ -220,7 +220,7 @@
           <a href="#services" class="px-6 py-3 rounded-2xl bg-brand hover:bg-primary text-white font-semibold shadow-md transition duration-300 flex items-center gap-2">
             <i class="fa fa-briefcase"></i> Our Services
           </a>
-          <a href="C:\Users\User\Desktop\ca2_212619 (5)\ca2_212619\html\contact.php.html" class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/30 hover:bg-white/20 font-semibold transition duration-300 flex items-center gap-2">
+          <a href="html\contact.php.html" class="px-6 py-3 rounded-2xl bg-white/10 ring ring-white/30 hover:bg-white/20 font-semibold transition duration-300 flex items-center gap-2">
             <i class="fa fa-paper-plane"></i> Contact Us
           </a>
         </div>
@@ -493,3 +493,4 @@
 </body>
 
 </html>
+
